# kalman-vae

./: .gitignore  Makefile  README.md  TODO.md  config.yaml  pyproject.toml  setup.py
kvae/: __init__.py  dataloader.py  lgssm.py  lstm.py  model.py  pymunk_dataset.py  vae.py
kvae/data_loading/: pymunk_dataset.py
kvae/dataloader/: base.py  pymunk_dataset.py
kvae/kalman/: dyn_param.py  kalman_filter.py  switch_dyn_param.py  test_filter.py  test_optim.py
kvae/model/: config.py  kalman_filter.py  lgssm.py  lstm.py  model.py  vae.py
kvae/train/: config.yaml  imputation.py  logging_utils.py  testing.py  train.py  train_lightning.py  train_vae.py  utils.py
kvae/utils/: config.py  losses.py  utils_plots.py
kvae/vae/: config.py  config.yaml  losses.py  train_vae.py  vae.py  weights.py
notebooks/: kvae_evaluate.ipynb  kvae_metrics.ipynb  kvae_skvae_comparison_metrics.ipynb  kvae_skvae_comparison_states.ipynb  posterior_collapse.ipynb
tests/: conftest.py  test_components.py  test_imputation_stability.py  test_pymunk_dataset.py  test_vae_stability.py  test_vae_wrapper.py
tests/fixtures/: out1.pt
