[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvae"
version = "0.1.0"
description = "KVAE implementation with PyTorch"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "numpy==2.2.6",
  "torch==2.9.0",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kvae"]
