[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvae"
version = "0.1.0"
description = "KVAE implementation with PyTorch"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "numpy",
  "torch",
  "moviepy",  # video logging in Tensorboard
  "matplotlib",      # Used extensively for plotting
  "tqdm",            # Progress bars in training
  "imageio",         # Video saving in testing.py
  "pyyaml",          # Config loading
]

[project.optional-dependencies]
dev = [
  "pytest",
  "tensorboard",
  "pytorch-lightning",  # initial vae only trainings
  "pandas",          # Used in notebooks
  "seaborn",        # Used in notebooks for heatmaps
  "jupyter",         # For notebooks
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kvae"]
